--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,14 +3,14 @@ on:
   workflow_dispatch:
 jobs:
   resources:
-    name: Mac resources
-    runs-on: macos-latest
+    name: Scrape
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
       - run: npm ci
 
       - name: Fetch resources
