--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,4 +1,4 @@
-name: Resources
+name: esources
 on:
   workflow_dispatch:
 jobs:
@@ -18,6 +18,8 @@ jobs:
 
       - name: Update resources
         uses: test-room-7/action-update-file@v1
+        permission:
+          contents: write
         with:
           file-path: ./weatherdata.json
           commit-msg: Update resources
