--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Update resources
         uses: test-room-7/action-update-file@v1
         with:
-          file-path: ./weatherdata.json
+          file-path: weatherdata.json
           commit-msg: Update resources
           github-token: ${{ secrets.GITHUB_TOKEN }}
