--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,8 +1,7 @@
 name: Resources
 on:
-on:
   schedule:
-    - cron: '0 13 * * 1'
+    - cron: "0 13 * * 1"
   # workflow_dispatch:
 permissions:
   contents: write
